fixed font size on mobile and social media alignment

--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -495,7 +495,7 @@ body {
 }
 
 .header-bg{
-	background-color: rgba(33,33,33,.4);
+	background-color: rgba(33,33,33,0.4);
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -503,4 +503,10 @@ body {
   z-index: 2;
   top: 0;
   left: 0;
+}
+
+@media only screen and (max-width: 768px){
+	p, li{
+		font-size: 16px;
+	}
 }
